# BerryAuto

./: CERTIFICATES.md  CONFIG.md  GNOME.md  INSTRUCTIONS.md  README.md  out.txt
berryautod/: .gitignore  CMakeLists.txt
berryautod/certs/: android_auto.crt  android_auto.key  server.crt  server.key
berryautod/proto/: input.proto  media.proto  navigation.proto  opengal.proto
berryautod/protocols/: wlr-screencopy-unstable-v1.xml
berryautod/src/: aap_core.hpp  aap_sender.cpp  aap_sender.hpp  audio_alsa.cpp  audio_alsa.hpp  certs.cpp  certs.hpp  channel_manager.cpp  channel_manager.hpp  config_parser.cpp  config_parser.hpp  crypto_tls.cpp  crypto_tls.h  dbus_portal.cpp  dbus_portal.hpp  ffs_usb.cpp  ffs_usb.hpp  globals.hpp  handler_control.cpp  handler_control.hpp  handler_media.cpp  handler_media.hpp  input_handler.cpp  input_handler.hpp  input_injector.cpp  input_injector.h  main.cpp  message_handler.cpp  message_handler.hpp  protocol_framer.cpp  protocol_framer.h  transport_ffs.cpp  transport_ffs.h  usb_ep0.cpp  usb_ep0.hpp  usb_rx.cpp  usb_rx.hpp  video_encoder.cpp  video_encoder.h  video_encoder.hpp  (+9 more)
config/: 10-vkms.conf
dkms/berryauto-audio-1.0/: Makefile  berryauto_audio.c  dkms.conf
prompt4/: headunitrevived.md
proto/: control.proto  input.proto  media.proto  navigation.proto  playback.proto  sensors.proto  wireless.proto
scripts/: install_audio_dkms.sh  morph_to_aa.sh  resize_desktop.sh  run_berryauto.sh  setup_audio.sh  setup_opengal_gadget.sh
